--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "devbridge-autocomplete": "^1.4.9",
     "exports-loader": "^0.7.0",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "lazysizes": "^4.1.2",
     "lightgallery.js": "^1.1.1",
+    "path": "^0.12.7",
     "popper.js": "^1.14.4",
     "simplebar": "^3.0.0-beta.5",
     "social-likes": "^3.1.3",
