--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
+    "json-pretty-html": "^1.2.0",
     "lazysizes": "^4.1.2",
     "lightgallery.js": "^1.1.1",
     "path": "^0.12.7",
