--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.1.6",
     "bem-core": "^4.3.1",
     "bootstrap": "^4.1.3",
     "devbridge-autocomplete": "^1.4.9",
@@ -57,6 +58,9 @@
     "lightgallery.js": "^1.1.1",
     "path": "^0.12.7",
     "popper.js": "^1.14.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-virtualized": "^9.21.0",
     "simplebar": "^3.0.0-beta.5",
     "social-likes": "^3.1.3",
     "social-likes-next": "^1.1.0",
