--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,11 @@
     "node": true,
     "jquery": true
   },
-  "extends": ["eslint:recommended", "google"],
+  "extends": [
+    "eslint:recommended",
+    "google",
+    "plugin:react/recommended"
+  ],
   "plugins": [
     "standard",
     "promise"
