--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.1.6",
+    "axios": "^0.18.0",
     "bem-core": "^4.3.1",
     "bootstrap": "^4.1.3",
     "devbridge-autocomplete": "^1.4.9",
     "exports-loader": "^0.7.0",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "image-webpack-loader": "^4.6.0",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
@@ -67,6 +69,11 @@
     "swiper": "^4.4.1",
     "tether": "^1.4.4",
     "throttle-debounce": "^2.0.1",
+    "vue": "^2.5.21",
+    "vue-axios": "^2.1.4",
+    "vue-loader": "^15.4.2",
+    "vue-resource": "^1.5.1",
+    "vuex": "^3.0.1",
     "webpack-php-loader": "^0.5.0"
   },
   "devDependencies": {
@@ -76,7 +83,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.0.0",
-    "@intervolga/bembh-loader": "^1.1.8",
+    "@intervolga/bembh-loader": "https://github.com/TeG2405/bembh-loader.git",
     "@intervolga/bemdecl-loader": "^1.0.5",
     "@intervolga/bemdeps-loader": "^1.1.6",
     "@intervolga/bemjson-loader": "^1.2.4",
@@ -102,6 +109,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^5.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
@@ -117,6 +125,7 @@
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
     "url-loader": "^0.6.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.1",
