--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "social-likes-next": "^1.1.0",
     "swiper": "^4.4.1",
     "tether": "^1.4.4",
+    "three": "^0.100.0",
     "throttle-debounce": "^2.0.1",
     "vue": "^2.5.21",
     "vue-axios": "^2.1.4",
@@ -115,7 +116,7 @@
     "html-webpack-plugin": "^3.2.0",
     "imagemin-loader": "^1.1.1",
     "imagemin-mozjpeg": "^7.0.0",
-    "imagemin-webpack-plugin": "^2.3.0",
+    "imagemin-webpack-plugin": "^2.4.0",
     "node-sass": "^4.9.3",
     "postcss-discard-font-face": "^3.0.0",
     "postcss-easysprites": "^0.1.9",
@@ -129,7 +130,7 @@
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "lint:fix": "eslint --fix src",
