--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "type": "git",
     "url": "git://github.com/intervolga/project-stub"
   },
+  "clientBH": "static",
+  "publicPath": "",
   "engines": {
     "node": ">=6"
   },
@@ -113,9 +115,10 @@
     "eslint-plugin-vue": "^5.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "git-branch": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-loader": "^1.1.1",
-    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.0",
     "node-sass": "^4.9.3",
     "postcss-discard-font-face": "^3.0.0",
@@ -139,7 +142,7 @@
     "dev:prof": "cross-env NODE_ENV=develop node --prof ./node_modules/.bin/webpack --mode development --colors",
     "prod:watch": "cross-env NODE_ENV=production webpack-dev-server --mode production --watch",
     "prod:build": "cross-env NODE_ENV=production webpack --mode production --progress --colors --hide-modules",
-    "prod:build:bitrix": "cross-env NODE_ENV=production BITRIX=true webpack --mode production --progress --colors --hide-modules",
+    "prod:branch": "cross-env NODE_ENV=production branch=true webpack --mode production --progress --colors --hide-modules",
     "prod:prof": "cross-env NODE_ENV=production webpack --mode production --profile --json > stats.json",
     "prod:stat": "npm run prod:prof && webpack-bundle-analyzer stats.json dist",
     "test:start": "./node_modules/.bin/enb make tmpl-specs",
