--- a/package.json
+++ b/package.json
@@ -44,45 +44,30 @@
     ]
   },
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.1.6",
-    "axios": "^0.18.0",
-    "bem-core": "^4.3.1",
     "bootstrap": "^4.1.3",
-    "devbridge-autocomplete": "^1.4.9",
-    "exports-loader": "^0.7.0",
-    "font-awesome": "^4.7.0",
-    "fs": "0.0.1-security",
-    "image-webpack-loader": "^4.6.0",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "json-pretty-html": "^1.2.0",
     "lazysizes": "^4.1.2",
-    "lightgallery.js": "^1.1.1",
     "path": "^0.12.7",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-virtualized": "^9.21.0",
-    "simplebar": "^3.0.0-beta.5",
-    "social-likes": "^3.1.3",
-    "social-likes-next": "^1.1.0",
     "swiper": "^4.4.1",
     "tether": "^1.4.4",
-    "three": "^0.100.0",
     "throttle-debounce": "^2.0.1",
     "vue": "^2.5.21",
     "vue-axios": "^2.1.4",
-    "vue-loader": "^15.4.2",
     "vue-resource": "^1.5.1",
-    "vuex": "^3.0.1",
-    "webpack-php-loader": "^0.5.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/plugin-transform-react-jsx": "^7.1.6",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.0.0",
@@ -96,16 +81,13 @@
     "@intervolga/html-index-plugin": "^1.0.3",
     "@intervolga/html-webpack-asset-template-plugin": "^1.0.3",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
+    "axios": "^0.18.0",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "enb": "^1.5.1",
-    "enb-bem-tmpl-specs": "^1.3.3",
-    "enb-bh": "^1.2.1",
-    "enb-magic-factory": "^0.5.0",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.8.0",
     "eslint-loader": "^2.1.1",
@@ -120,6 +102,7 @@
     "imagemin-loader": "^1.1.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.0",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.9.3",
     "postcss-discard-font-face": "^3.0.0",
     "postcss-easysprites": "^0.1.9",
@@ -130,10 +113,12 @@
     "svg-url-loader": "^2.3.2",
     "url-loader": "^0.6.2",
     "vue-template-compiler": "^2.5.21",
+    "vue-loader": "^15.4.2",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "exports-loader": "^0.7.0"
   },
   "scripts": {
     "lint:fix": "eslint --fix src",
