--- a/package.json
+++ b/package.json
@@ -44,17 +44,19 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "json-pretty-html": "^1.2.0",
     "lazysizes": "^4.1.2",
+    "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "sass-loader": "^7.1.0",
     "swiper": "^4.4.1",
     "tether": "^1.4.4",
     "throttle-debounce": "^2.0.1",
@@ -66,8 +68,8 @@
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/plugin-transform-react-jsx": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.0.0",
@@ -81,8 +83,8 @@
     "@intervolga/html-index-plugin": "^1.0.3",
     "@intervolga/html-webpack-asset-template-plugin": "^1.0.3",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
-    "axios": "^0.18.0",
     "autoprefixer": "^8.6.5",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
@@ -95,30 +97,28 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "git-branch": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "imagemin-loader": "^1.1.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.0",
-    "image-webpack-loader": "^4.6.0",
-    "node-sass": "^4.9.3",
     "postcss-discard-font-face": "^3.0.0",
     "postcss-easysprites": "^0.1.9",
     "postcss-loader": "^2.1.6",
-    "sass-loader": "^6.0.7",
     "sass-rem": "^2.0.1",
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
     "url-loader": "^0.6.2",
-    "vue-template-compiler": "^2.5.21",
     "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14",
-    "exports-loader": "^0.7.0"
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "lint:fix": "eslint --fix src",
