--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     ]
   },
   "dependencies": {
+    "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-notes": "^5.0.11",
+    "@storybook/addon-viewport": "^5.0.11",
     "bootstrap": "^4.3.1",
     "highlight.js": "^9.15.6",
     "inputmask": "^4.0.2",
