--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@intervolga/bemdeps-loader": "^1.1.6",
     "@intervolga/bemjson-loader": "^1.2.4",
     "@intervolga/bemrequire-loader": "^1.1.5",
-    "@intervolga/bh-ext": "^1.0.5",
+    "@intervolga/bh-ext": "^1.0.7",
     "@intervolga/eval-loader": "^1.0.3",
     "@intervolga/html-index-plugin": "^1.0.3",
     "@intervolga/html-webpack-asset-template-plugin": "^1.0.3",
@@ -97,6 +97,7 @@
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "core-js": "^2.6.11",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -115,6 +116,7 @@
     "imagemin-loader": "^1.1.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.0",
+    "node-sass": "^4.14.1",
     "postcss-discard-font-face": "^3.0.0",
     "postcss-easysprites": "^0.1.9",
     "postcss-loader": "^2.1.6",
