--- a/package.json
+++ b/package.json
@@ -56,15 +56,22 @@
     "jquery-ui-touch-punch": "^0.2.3",
     "json-pretty-html": "^1.2.0",
     "lazysizes": "^4.1.2",
+    "lg-fullscreen.js": "^1.2.0",
+    "lg-video.js": "^1.3.0",
+    "lg-zoom.js": "^1.3.0",
+    "lightgallery.js": "^1.4.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
+    "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.14.6",
     "post-compile-webpack-plugin": "^0.1.2",
     "pretty": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "sass-loader": "^7.1.0",
-    "swiper": "^4.4.1",
+    "select2": "^4.0.13",
+    "swiper": "^6.3.5",
     "tether": "^1.4.4",
     "throttle-debounce": "^2.0.1",
     "vue": "^2.5.21",
@@ -137,15 +144,17 @@
     "dev:watch": "cross-env NODE_ENV=develop webpack-dev-server --mode development --watch",
     "dev:prof": "cross-env NODE_ENV=develop node --prof ./node_modules/.bin/webpack --mode development --colors",
     "prod:watch": "cross-env NODE_ENV=production webpack-dev-server --mode production --watch",
+    "prod:watch:storybook": "cross-env NODE_ENV=production webpack --mode production --watch",
     "prod:build": "cross-env NODE_ENV=production webpack --mode production --progress --colors --hide-modules",
     "prod:branch": "cross-env NODE_ENV=production branch=true webpack --mode production --progress --colors --hide-modules",
     "prod:prof": "cross-env NODE_ENV=production webpack --mode production --profile --json > stats.json",
     "prod:stat": "npm run prod:prof && webpack-bundle-analyzer stats.json dist",
     "test:start": "./node_modules/.bin/enb make tmpl-specs",
     "test:rebuild": "cross-env BEM_TMPL_SPECS_SAVE_REFERENCE_HTML=true ./node_modules/.bin/enb make tmpl-specs",
-    "icon:build": "icon-font-generator src/blocks.01-base/fi/svg/*.svg -o src/blocks.02-common/fi/font --name fi -c false --html true --types woff",
+    "icon:build": "icon-font-generator src/blocks.01-base/fi/svg/*.svg -o src/blocks.01-base/fi/font --name fi -c false --html true --types woff",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook:watch": "concurrently --kill-others \"npm run storybook\" \"npm run prod:watch:storybook\"",
+    "storybook:build": "build-storybook"
   },
   "private": false
 }
