--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^5.3.0",
     "highlight.js": "^9.15.6",
+    "icon-font-generator": "^2.1.11",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
