--- a/package.json
+++ b/package.json
@@ -49,37 +49,21 @@
     "@storybook/addon-notes": "^5.3.21",
     "@storybook/addon-viewport": "^6.1.11",
     "bootstrap": "^4.3.1",
-    "concurrently": "^5.3.0",
-    "highlight.js": "^9.15.6",
     "icon-font-generator": "^2.1.11",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
-    "json-pretty-html": "^1.2.0",
     "lazysizes": "^4.1.2",
-    "lg-fullscreen.js": "^1.2.0",
-    "lg-video.js": "^1.3.0",
-    "lg-zoom.js": "^1.3.0",
-    "lightgallery.js": "^1.4.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
-    "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.14.6",
     "post-compile-webpack-plugin": "^0.1.2",
-    "pretty": "^2.0.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
     "sass-loader": "^7.1.0",
-    "select2": "^4.0.13",
     "swiper": "^6.3.5",
     "tether": "^1.4.4",
-    "throttle-debounce": "^2.0.1",
-    "vue": "^2.5.21",
-    "vue-axios": "^2.1.4",
-    "vue-resource": "^1.5.1",
-    "vuex": "^3.0.1"
+    "throttle-debounce": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -102,7 +86,6 @@
     "@storybook/addon-info": "^5.3.21",
     "@storybook/html": "^6.1.11",
     "autoprefixer": "^8.6.5",
-    "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
@@ -133,8 +116,6 @@
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
     "url-loader": "^0.6.2",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.1",
@@ -146,18 +127,14 @@
     "dev:watch": "cross-env NODE_ENV=develop webpack-dev-server --mode development --watch",
     "dev:prof": "cross-env NODE_ENV=develop node --prof ./node_modules/.bin/webpack --mode development --colors",
     "prod:watch": "cross-env NODE_ENV=production webpack-dev-server --mode production --watch",
-    "prod:watch:storybook": "cross-env NODE_ENV=production webpack --mode production --watch",
     "prod:build": "cross-env NODE_ENV=production webpack --mode production --progress --colors --hide-modules",
-    "prod:branch": "cross-env NODE_ENV=production branch=true webpack --mode production --progress --colors --hide-modules",
     "prod:prof": "cross-env NODE_ENV=production webpack --mode production --profile --json > stats.json",
     "prod:stat": "npm run prod:prof && webpack-bundle-analyzer stats.json dist",
-    "test:start": "./node_modules/.bin/enb make tmpl-specs",
-    "test:rebuild": "cross-env BEM_TMPL_SPECS_SAVE_REFERENCE_HTML=true ./node_modules/.bin/enb make tmpl-specs",
     "icon:build": "icon-font-generator src/blocks.01-base/fi/svg/*.svg -o src/blocks.01-base/fi/font --name fi -c false --html true --types woff",
-    "storybook": "start-storybook -p 6006",
-    "storybook:watch": "cross-env STORYBOOK=true concurrently --kill-others \"npm run storybook\" \"npm run prod:watch:storybook\"",
-    "storybook:build": "build-storybook",
-    "storybook:generate": "node ./.storybook/generate.js"
+    "storybook": "cross-env NODE_ENV=storybook start-storybook -p 6006",
+    "storybook:build": "cross-env NODE_ENV=storybook build-storybook",
+    "storybook:generate": "node ./.storybook/generate.js",
+    "branch:build": "cross-env NODE_ENV=branch webpack --mode production --progress --colors --hide-modules"
   },
   "private": false
 }
